--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,56 @@ body{
 #nav .menuItem img{   
     float: left;
 }
+
+.scroller{
+    max-width: 100%;
+}
+.scroller__inner{
+    padding-block: 1rem ;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.scroller[data-animated="true"]{
+    overflow: hidden;
+
+    -webkit-mask: linear-gradient(
+        90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+    );
+    mask: linear-gradient(
+    90deg,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+    );
+}
+.scroller[data-animated="true"] .scroller__inner{
+    width: fit-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards)linear infinite;
+}
+.scroller[data-direction="right"]{
+    --_animation-direction: reverse;
+}
+.scroller[data-direction="left"]{
+    --_animation-direction: forwards;
+}
+.scroller[data-duration="slow"]{
+    --_animation-duration: 120s;
+}
+.scroller[data-duration="fast"]{
+    --_animation-duration: 20s;
+}
+
+@keyframes scroll {
+    to {
+        transform: translate(calc(-100% - 0.5rem));
+    }
+}
+
+
