--- a/styles.css
+++ b/styles.css
@@ -24,28 +24,27 @@ body{
     padding-block: 1rem ;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
 }
 .scroller[data-animated="true"]{
     overflow: hidden;
-
     -webkit-mask: linear-gradient(
         90deg,
     transparent,
     white 20%,
-    white 80%,
+    white 100%,
     transparent
     );
     mask: linear-gradient(
     90deg,
     transparent,
     white 20%,
-    white 80%,
+    white 100%,
     transparent
     );
 }
 .scroller[data-animated="true"] .scroller__inner{
-    width: fit-content;
+    width: max-content;
     flex-wrap: nowrap;
     animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards)linear infinite;
 }
@@ -64,7 +63,7 @@ body{
 
 @keyframes scroll {
     to {
-        transform: translate(calc(-100% - 0.5rem));
+        transform: translate(calc(-50% - 1rem));
     }
 }
 
