--- a/styles.css
+++ b/styles.css
@@ -72,3 +72,22 @@ body{
     }
 }
 
+
+input[type=text]{
+    width: 100%;
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    margin-top: 6px;
+    margin-bottom: 16px; 
+
+  }
+
+textarea{
+    width: 100%;
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    margin-top: 6px;
+    margin-bottom: 16px; 
+    height: 200px;
+}
