--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body{
 .scroller[data-animated="true"] .scroller__inner{
     width: max-content;
     flex-wrap: nowrap;
-    animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards)linear infinite;
+    animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards)linear var(--_animated,infinite);
 }
 .scroller[data-direction="right"]{
     --_animation-direction: reverse;
@@ -66,12 +66,18 @@ body{
     --_animation-duration: 120s;
 }
 .scroller[data-duration="fast"]{
-    --_animation-duration: 20s;
+    --_animation-duration: 20s; 
+}
+.scroller[data-animation="stop"]{
+    --_animated: paused;
+}
+.scroller[data-animation="play"]{
+    --_animated: infinite;
 }
 
 @keyframes scroll {
     to {
-        transform: translate(calc(-33% - 0.65rem));
+        transform: translate(calc(-33% - 0.667rem));
     }
 }
 
@@ -93,4 +99,3 @@ textarea{
     margin-bottom: 16px; 
     height: 200px;
 }
-
