--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,49 @@ body{
 .navBarMain{
     z-index: 2;
 }
+.scrollHide{
+    opacity: 0;
+    filter:blur(5px);
+    transform: translateY(100%);
+    color: grey;
+    transition: all , 1s;
+}
+.logo:nth-child(2){
+    transition-delay: 200ms;
+}
+.logo:nth-child(3){
+    transition-delay: 400ms;
+}
+.logo:nth-child(4){
+    transition-delay: 600ms;
+}
+.logo:nth-child(5){
+    transition-delay: 800ms;
+}
+.logo:nth-child(6){
+    transition-delay: 1000ms;
+}
+.logo:nth-child(7){
+    transition-delay: 1200ms;
+}
+.logo:nth-child(8){
+    transition-delay: 1400ms;
+}
+.show{
+    opacity: 1;
+    filter:blur(0);
+    transform: translateY(0);
+    color: white;
+}
+
+@media(prefers-reduced-motion){
+    .hidden{
+        transition: none;
+    }
+}
+
+
+
 .videoSection video{
     z-index: -2;
 }
