--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ body{
     opacity: 0;
     filter:blur(5px);
     transform: translateY(100%);
-    color: grey;
-    transition: color 1s;
+    transition: transform 1s , filter 1s , opacity 1s;
 }
 .logo:nth-child(2){
     transition-delay: 200ms;
