--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,10 @@ body{
     transparent
     );
 }
+.youtube-video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
 .scroller[data-animated="true"] .scroller__inner{
     width: max-content;
     flex-wrap: nowrap;
